포트폴리오 작업
1. Projects page 구성 테스트
- mui timeline 적용
- timeline을 사용하기 위한 mui/lab 설치
- projects 설명부분 디자인
- 화면 확인을 위한 우선 하드코딩 (추후 md파일 가져오는 방식으로 적용예정)

2. scroll 관련 수정
- overflow-x 허용하지 않음
- header, footer width 조정 (100vw)
- overflow-y scolling 테스트

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,6 +27,7 @@
 
 body {
   font-family: "S-CoreDream-3Light", sans-serif;
+  overflow-x: hidden;
 }
 
 h1,
@@ -84,6 +85,7 @@ section:nth-child(2) {
 
 section:nth-child(3) {
   /* background: #36bf66; */
+  overflow-y: scroll;
 }
 
 section:nth-child(4) {
