--- a/src/css/Contents/Projects.css
+++ b/src/css/Contents/Projects.css
@@ -1,1 +1,27 @@
-@import "../App.css";
+.image2 {
+  padding: 8px;
+  img {
+    width: 100%;
+    height: 100%;
+    border: 0.25rem groove black;
+    border-radius: 4px;
+    margin: 0 auto;
+  }
+}
+
+.custom-project {
+  background-color: cadetblue;
+  border: 1px solid rgba(97, 97, 97, 0.2);
+  border-radius: 16px;
+  padding: 8px;
+  display: flex;
+}
+
+.custom-project-details {
+  border: 1px solid rgba(97, 97, 97, 0.2);
+  border-radius: 16px;
+  padding: 12px;
+  background-color: black;
+  text-align: left;
+  font-size: 9pt;
+}
