포트폴리오 작업
1. Projects page 구성 완료
- 구성 완료
- 디자인 향상, md파일 reader 로직 추가

2. 라이브러리 추가 설치
- md파일 read및 처리를 위한 react-markdown, remark-gfm, react-syntax-highlighter
- mui icon을 위한 mui icons-material

3. md파일 및 component 작업
- md파일 읽기를 위해 globals.d.ts 추가
- markdownFiles 추가, components 추가 및 수정(
AlternateTimeline.tsx, ProjectContentsDialog.tsx, ProjectMdFileReader.tsx)

4. site전체적 Layout 스타일 변경
- 가로 section slide 방식 삭제 => 세로 scroll 방식으로 변경

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -39,15 +39,15 @@ h6 {
   padding: 8px;
 }
 
-.siteTitle {
+.site-title {
   padding: 8px;
 }
 
-.siteFooter {
+.site-footer {
   padding: 8px;
 }
 
-.slideShow {
+/* .slideShow {
   text-align: center;
   overflow: hidden;
   height: 100vh;
@@ -57,12 +57,15 @@ h6 {
 .slideWrapper {
   width: calc(100vw * 4);
   animation: slide 40s ease infinite;
+} */
+
+.contents-container {
+  height: calc(auto * 4);
 }
 
 section {
-  float: left;
-  height: 100vh;
   width: 100vw;
+  min-height: 700px;
   background-image: linear-gradient(
       0deg,
       rgb(80, 44, 4) 0%,
@@ -85,7 +88,6 @@ section:nth-child(2) {
 
 section:nth-child(3) {
   /* background: #36bf66; */
-  overflow-y: scroll;
 }
 
 section:nth-child(4) {
@@ -135,4 +137,10 @@ section:nth-child(4) {
   100% {
     width: 92%;
   }
+}
+
+.section-container {
+  text-align: center;
+  align-items: center;
+  padding: 8px;
 }
