--- a/src/css/Reset.css
+++ b/src/css/Reset.css
@@ -10,12 +10,12 @@ span,
 applet,
 object,
 iframe,
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
-h6,
+h6, */
 p,
 blockquote,
 pre,
@@ -49,9 +49,9 @@ center,
 dl,
 dt,
 dd,
-ol,
+/* ol,
 ul,
-li,
+li, */
 fieldset,
 form,
 label,
@@ -108,10 +108,10 @@ section {
 body {
   line-height: 1;
 }
-ol,
+/* ol,
 ul {
   list-style: none;
-}
+} */
 blockquote,
 q {
   quotes: none;
