--- a/src/css/Contents/MyInfo.css
+++ b/src/css/Contents/MyInfo.css
@@ -1,4 +1,4 @@
-.image {
+.myinfo-image {
   img {
     width: 200px;
     height: 200px;
@@ -8,7 +8,7 @@
   }
 }
 
-.custom-myinfo-title {
+.myinfo-title-pane {
   font-size: 14pt;
   font-family: "Nanum Gothic", sans-serif;
   border: 1px solid rgba(97, 97, 97, 0.2);
@@ -18,7 +18,7 @@
   margin: 0 2rem;
 }
 
-.custom-myinfo {
+.myinfo-pane {
   border: 1px solid rgba(97, 97, 97, 0.2);
   border-radius: 16px;
   padding: 16px;
@@ -26,7 +26,7 @@
   margin: 0 2rem;
 }
 
-.custom-myhistory {
+.myhistory-pane {
   border: 1px solid rgba(97, 97, 97, 0.2);
   border-radius: 16px;
   background-color: black;
@@ -69,7 +69,7 @@
   }
 }
 
-.custom-button {
+/* .custom-button {
   background-color: black;
 }
 
@@ -79,4 +79,4 @@
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-}
+} */
