포트폴리오 작업
1. 사이트 UI단 Prototype 마무리
- Projects md파일 내용 일괄 수정
- Stacks, Contact 간략 Layout 및 UI 적용
- css수정 - welcome section에 한정 100vh 적용

2. 앞으로의 개선사항
- navigation 버튼 동작 수정 - 클릭시 section으로 이동하되 animation처리
- 화면 하단 'TOP'가기 버튼 적용예정
- 일부 mui component 공통 css 부분 styled-component 처리 (가능할시)
- 반응형 점검

--- a/src/css/Contents/Stacks.css
+++ b/src/css/Contents/Stacks.css
@@ -1,4 +1,4 @@
-.contact-title-pane {
+.stacks-title-pane {
   border: 1px solid rgba(97, 97, 97, 0.2);
   border-radius: 16px;
   padding: 16px;
@@ -7,7 +7,7 @@
   text-align: left;
 }
 
-.contact-pane {
+.stacks-pane {
   border: 1px solid rgba(97, 97, 97, 0.2);
   border-radius: 16px;
   padding: 16px;
