--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,7 +65,7 @@ h6 {
 
 section {
   width: 100vw;
-  min-height: 700px;
+  min-height: 400px;
   background-image: linear-gradient(
       0deg,
       rgb(80, 44, 4) 0%,
@@ -80,6 +80,7 @@ section {
 
 section:nth-child(1) {
   /* background: #d93b65; */
+  height: 100vh;
 }
 
 section:nth-child(2) {
