포트폴리오 작업
1. Stacks 수정
- 교육 수료내역, 자격증 추가

2. css, ui 수정
- Stacks, Contact의 pane에 내부에 텍스트가 들어갈시는 기존 style대로 적용
- hr divider css animation infinite 삭제

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -128,7 +128,8 @@ section:nth-child(4) {
 .divider {
   width: 0;
   border: 2px solid goldenrod;
-  animation: separator-width 5s ease-out infinite forwards;
+  /* animation: separator-width 5s ease-out infinite forwards; */
+  animation: separator-width 5s ease-out forwards;
 }
 
 @keyframes separator-width {
