포트폴리오 작업
1. header / nav / footer 수정
- Header에 header 추가, navigation에 nav 추가, Footer에 footer 추가 (html 5 태그)
- 반응형 대응 : header 와 nav 내 grid 처리로 영역 조정

2. top 가기 버튼 추가
- scroll이 어느정도 내려왔을시 top 버튼 추가 (ToTopButton.tsx)
- scroll 관련 css 조정 (behavior smooth)

3. Project md파일 수정
- listing 중 'key' prop을 적용하기 위해 codeKey 항목 추가

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,6 +25,10 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "S-CoreDream-3Light", sans-serif;
   overflow-x: hidden;
@@ -39,8 +43,14 @@ h6 {
   padding: 8px;
 }
 
-.site-title {
+/* .site-title {
   padding: 8px;
+} */
+
+.nav-link-anchor {
+  text-decoration: none;
+  color: beige;
+  font-family: "Nanum-Gothic", sans-serif;
 }
 
 .site-footer {
