--- a/src/css/Contents/Projects.css
+++ b/src/css/Contents/Projects.css
@@ -21,7 +21,10 @@
 }
 
 .project-card-image {
-  padding: 8px;
+  /* padding: 8px; */
+  figure {
+    width: 100%;
+  }
   figcaption {
     text-align: center;
     font-family: "Pretendard", sans-serif;
@@ -30,11 +33,12 @@
   }
   img {
     width: 100%;
-    height: 100px;
+    height: 120px;
     border: 0.25rem groove black;
     border-radius: 4px;
     margin: 0 auto;
     object-fit: cover;
+    box-sizing: border-box;
   }
 }
 
