포트폴리오 작업
1. html css 규칙 점검
- header / nav 부분의 처리, nav ul li 처리 => 적용 (grid삭제 / nav ui 수정 등)
- main(welcome) 화면 문구 center 정렬 처리 => 적용 (left, top 50% / transform 적용 등)
- h(n) 태그는 h1부터 순차적으로 .. => 적용 (h1,h2,h3 사용)
- p 태그 처리 (문단,단락의 개념) => 적용 (MyInfo.tsx 수정)

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -47,10 +47,20 @@ h6 {
   padding: 8px;
 } */
 
-.nav-link-anchor {
+.navigation ul li {
+  display: inline-block;
+  margin: 0 8px;
+}
+
+.navigation ul li a {
   text-decoration: none;
   color: beige;
-  font-family: "Nanum-Gothic", sans-serif;
+  font-family: "SBAggroB", sans-serif;
+  text-transform: uppercase;
+}
+
+.navigation ul li a:hover {
+  color: #efc443;
 }
 
 .site-footer {
@@ -93,6 +103,13 @@ section:nth-child(1) {
   height: 100vh;
 }
 
+.welcome-area {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 section:nth-child(2) {
   /* background: #037e8c; */
 }
@@ -127,12 +144,6 @@ section:nth-child(4) {
   90% {
     margin-left: calc(-100vw * 3);
   }
-}
-
-.welcomeSection {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .divider {
