--- a/src/css/App.css
+++ b/src/css/App.css
@@ -86,12 +86,9 @@ h6 {
 section {
   width: 100vw;
   min-height: 400px;
-  background-image: linear-gradient(
-      0deg,
-      rgb(80, 44, 4) 0%,
-      rgba(80, 44, 4, 0.75) 100%
-    ),
+  background-image: linear-gradient(0deg, #4b494b, #000000ad),
     url("https://images.pexels.com/photos/6373293/pexels-photo-6373293.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
