--- a/src/css/App.css
+++ b/src/css/App.css
@@ -162,5 +162,5 @@ section:nth-child(4) {
 .section-container {
   text-align: center;
   align-items: center;
-  padding: 8px;
+  padding: 8px 0;
 }
