--- a/src/css/Contents/MyInfo.css
+++ b/src/css/Contents/MyInfo.css
@@ -9,27 +9,24 @@
 }
 
 .myinfo-title-pane {
-  border: 1px solid rgba(97, 97, 97, 0.2);
+  border: 1px solid #e8751a;
   border-radius: 16px;
   padding: 16px;
-  background-color: black;
   margin: 0 2rem;
   text-align: left;
 }
 
 .myinfo-pane {
-  border: 1px solid rgba(97, 97, 97, 0.2);
+  border: 1px solid #e8751a;
   border-radius: 16px;
   padding: 16px;
-  background-color: black;
   margin: 0 2rem;
   text-align: left;
 }
 
 .myhistory-pane {
-  border: 1px solid rgba(97, 97, 97, 0.2);
+  border: 1px solid #e8751a;
   border-radius: 16px;
-  background-color: black;
   margin: 0 2rem;
 
   table {
@@ -60,11 +57,10 @@
   }
 
   table p.company {
-    color: tomato;
+    color: #e8751a;
   }
 
   table p.subtext {
-    color: gray;
     font-size: 10pt;
   }
 }
