--- a/src/css/Contents/Contact.css
+++ b/src/css/Contents/Contact.css
@@ -1,17 +1,15 @@
 .contact-title-pane {
-  border: 1px solid rgba(97, 97, 97, 0.2);
+  border: 1px solid #e8751a;
   border-radius: 16px;
   padding: 16px;
-  background-color: black;
   margin: 0 2rem;
   text-align: left;
 }
 
 .contact-pane {
-  border: 1px solid rgba(97, 97, 97, 0.2);
+  border: 1px solid #e8751a;
   border-radius: 16px;
   padding: 16px;
-  background-color: black;
   margin: 0 2rem;
   text-align: left;
 }
