--- a/src/css/Contents/Stacks.css
+++ b/src/css/Contents/Stacks.css
@@ -1,5 +1,5 @@
 .stacks-title-pane {
-  border: 1px solid #e8751a;
+  border: 1px solid #e2bfb3;
   border-radius: 16px;
   padding: 16px;
   margin: 0 2rem;
@@ -7,7 +7,7 @@
 }
 
 .stacks-pane {
-  border: 1px solid #e8751a;
+  border: 1px solid #e2bfb3;
   border-radius: 16px;
   padding: 16px;
   margin: 0 2rem;
