--- a/src/css/App.css
+++ b/src/css/App.css
@@ -54,13 +54,13 @@ h6 {
 
 .navigation ul li a {
   text-decoration: none;
-  color: #fda403;
+  color: #ffbe98;
   font-family: "SBAggroB", sans-serif;
   text-transform: uppercase;
 }
 
 .navigation ul li a:hover {
-  color: #e8751a;
+  color: #e2bfb3;
 }
 
 .site-footer {
@@ -141,7 +141,7 @@ section:nth-child(4) {
 
 .divider {
   width: 0;
-  border: 2px solid #e8751a;
+  border: 2px solid #e2bfb3;
   /* animation: separator-width 5s ease-out infinite forwards; */
   animation: separator-width 5s ease-out forwards;
 }
