--- a/src/css/App.css
+++ b/src/css/App.css
@@ -54,7 +54,7 @@ h6 {
 
 .navigation ul li a {
   text-decoration: none;
-  color: #ffbe98;
+  color: black;
   font-family: "SBAggroB", sans-serif;
   text-transform: uppercase;
 }
@@ -151,7 +151,7 @@ section:nth-child(4) {
     width: 0;
   }
   100% {
-    width: 92%;
+    width: 90%;
   }
 }
 
