--- a/src/css/Contents/Projects.css
+++ b/src/css/Contents/Projects.css
@@ -6,16 +6,12 @@
 }
 
 .project-card-pane {
-  background-color: #f7ded0;
-  border: 1px solid #e2bfb3;
+  border: 2px groove #e2bfb3;
   border-radius: 16px;
-  padding: 8px;
-  display: flex;
-}
-
-.project-card-pane:hover {
-  cursor: pointer;
-  box-shadow: 0 5px 20px #f7ded0;
+  padding: 12px;
+  background-color: whitesmoke;
+  text-align: left;
+  font-size: 9pt;
 }
 
 .project-card-image {
@@ -31,45 +27,11 @@
   }
   img {
     width: 100%;
-    height: 120px;
+    max-height: 700px;
     border: 0.25rem groove black;
     border-radius: 4px;
     margin: 0 auto;
     object-fit: cover;
     box-sizing: border-box;
-  }
-}
-
-.project-card-details-pane {
-  border: 1px solid #e2bfb3;
-  border-radius: 16px;
-  padding: 12px;
-  background-color: #fff;
-  text-align: left;
-  font-size: 9pt;
-}
-
-.project-card-subtext {
-  font-family: "Nanum-Gothic", sans-serif;
-  font-size: 13pt;
-  text-align: center;
-  /* color: beige; */
-}
-
-.project-card-dialog-image {
-  padding: 8px;
-  figcaption {
-    text-align: center;
-    font-family: "Pretendard", sans-serif;
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-  img {
-    width: 100%;
-    max-height: 500px;
-    border: 0.25rem groove black;
-    border-radius: 4px;
-    margin: 0 auto;
-    object-fit: cover;
   }
 }
