--- a/src/css/App.css
+++ b/src/css/App.css
@@ -54,7 +54,7 @@ h6 {
 
 .navigation ul li a {
   text-decoration: none;
-  color: #35374b;
+  color: dimgray;
   font-family: "SBAggroB", sans-serif;
   text-transform: uppercase;
 }
