--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,7 +30,8 @@ html {
 }
 
 body {
-  font-family: "S-CoreDream-3Light", sans-serif;
+  /* font-family: "S-CoreDream-3Light", sans-serif; */
+  font-family: "Pretendard-Regular", sans-serif;
   overflow-x: hidden;
 }
 
