--- a/src/css/Contents/Projects.css
+++ b/src/css/Contents/Projects.css
@@ -21,7 +21,7 @@
   }
   figcaption {
     text-align: center;
-    font-family: "Pretendard", sans-serif;
+    font-family: "Pretendard-Regular", sans-serif;
     font-weight: 600;
     text-transform: uppercase;
   }
